--- a/learn-certs-pr/azure-developer.yml
+++ b/learn-certs-pr/azure-developer.yml
@@ -2,20 +2,20 @@
 title: 'Microsoft Certified: Azure Developer Associate'
 metadata:
   title: 'Microsoft Certified: Azure Developer Associate'
-  description: Microsoft Azure Developers entwickeln, erstellen, testen und warten Cloud-Lösungen, beispielsweise Anwendungen und Dienste in Zusammenarbeit mit Cloud-Lösungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, und implementieren diese Lösungen.
+  description: Microsoft Azure Developers entwickeln, erstellen, testen und warten Cloud-Lösungen, wie beispielsweise Anwendungen und Dienste, in Zusammenarbeit mit Cloud-Lösungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, um diese Lösungen zu implementieren.
 uid: certification.azure-developer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Microsoft Azure Developers entwickeln, erstellen, testen und warten Cloud-Lösungen, wie beispielsweise Anwendungen und Dienste, in Zusammenarbeit mit Cloud-Lösungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, um diese Lösungen zu implementieren.
+summary: |-
+  Microsoft Azure Developers entwickeln, erstellen, testen und warten Cloud-Lösungen, wie beispielsweise Anwendungen und Dienste, in Zusammenarbeit mit Cloud-Lösungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, um diese Lösungen zu implementieren.
 subTitle: Microsoft Azure Developers entwickeln, erstellen, testen und warten Cloud-Lösungen, wie beispielsweise Anwendungen und Dienste, in Zusammenarbeit mit Cloud-Lösungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, um diese Lösungen zu implementieren.
 levels:
 - intermediate
 skills:
-- Entwickeln von Azure Infrastructure als Service-Lösung
-- Entwickeln der Azure-Plattform als Service-Lösung 
-- Entwickeln für Azure-Speicher
+- Entwickeln Sie Azure-Computerlösungen
+- Entwickeln für Azure Speicher
 - Implementieren der Azure-Sicherheit
-- Überwachen, Fehlerbehebung und Optimierung von Lösungen
-- Verbindung zu Azure- und Drittanbieter-Diensten herstellen und nutzen
+- Überwachung, Fehlerbehebung und Optimierung von Azure Lösungen
+- Verbindung zu Azure-Diensten und Diensten von Drittanbietern herstellen und nutzen
 roles:
 - developer
 type: role-based
@@ -52,22 +52,22 @@ paths:
 - uid: learn.data-ai.intro-to-ml-with-python
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJUJ
 exams:
-- uid: exam.az-203
+- uid: exam.az-204
 resources:
-- title: Zertifizierungs-Lernpfad
-  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Azure Developer Associate zu werden.'
+- title: Lernpfad zur Zertifizierung
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Azure Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQqM
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen und die  aufgabenbasierten und fachlichen Zertifizierungen.
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfung wiederholen
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnen ein Forenmoderator antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
