--- a/learn-certs-pr/d365-fundamentals.yml
+++ b/learn-certs-pr/d365-fundamentals.yml
@@ -2,44 +2,46 @@
 title: 'Microsoft Certified: Dynamics 365 Fundamentals'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Fundamentals'
-  description: Zeigen Sie, dass Sie Microsoft Dynamics 365, die Power Platform, Cloud-Konzepte, Lizenzoptionen, Bereitstellungs- und Veröffentlichungsoptionen verstehen
+  description: 'Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung. '
 uid: certification.d365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: Zeigen Sie, dass Sie Microsoft Dynamics 365, die Power Platform, Cloud-Konzepte, Lizenzoptionen, Bereitstellungs- und Veröffentlichungsoptionen verstehen.
-subTitle: Zeigen Sie, dass Sie Microsoft Dynamics 365, die Power Platform, Cloud-Konzepte, Lizenzoptionen, Bereitstellungs- und Veröffentlichungsoptionen verstehen.
+summary: |-
+  Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.
+subTitle: 'Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.'
 levels:
 - beginner
 skills:
-- Dynamics 365 verstehen
-- Verstehen von Cloud-Konzepten
-- Verstehen von Implementierungen und Versionen
+- Identifizieren Sie Microsoft-Plattformkomponenten für Dynamics 365
+- Verstehen Sie KI und Mixed Reality für Dynamics 365
+- Understand model-driven apps
+- Grundlegendes zu Dynamics 365 Finance- und Operations-Apps
 roles:
 - functional-consultant
 type: fundamentals
 products:
 - dynamics
 courses:
-- uid: course.mb-900t01
+- uid: course.mb-901t00
 paths:
 - uid: learn-dynamics.wwl.dynamics-365-fundamentals
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUj0
 exams:
-- uid: exam.mb-900
+- uid: exam.mb-901
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Dynamics 365 Fundamentals zu werden.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35v9m
+- title: Lernpfad zur Zertifizierung
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 Fundamentals.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4pHPx
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
