--- a/learn-certs-pr/exams/70-339.yml
+++ b/learn-certs-pr/exams/70-339.yml
@@ -1,22 +1,23 @@
 ### YamlMime:Examination
 title: Managing Microsoft SharePoint Server 2016
 metadata:
-  title: 'Prüfung 70-339: Managing Microsoft SharePoint Server 2016'
-  description: 'Prüfung 70-339: Managing Microsoft SharePoint Server 2016'
+  title: 'Exam 70-339: Managing Microsoft SharePoint Server 2016'
+  description: 'Exam 70-339: Managing Microsoft SharePoint Server 2016'
 uid: exam.70-339
 displayName: 70-339
-summary: >-
-  Die Prüfung ist für erfahrene IT-Experten gedacht, die SharePoint 2016 in einem Rechenzentrum und in der Cloud installieren, konfigurieren, bereitstellen und verwalten. Kandidaten haben in der Regel mehr als vier Jahre Erfahrung in der Planung und Verwaltung von SharePoint und anderen Kerntechnologien, von denen SharePoint abhängt, einschließlich Windows Server 2008 R2 oder höher, Internet Information Services (IIS), SQL Server 2008 R2 oder höher, Active Directory und Netzwerkinfrastrukturdienste.
+summary: |-
+  <div style='color&#58; red;'>Dieses Examen wird am 30. Juni 2020 eingestellt. Eine Ersatzprüfung kann verfügbar sein. Um mehr zu erfahren, besuchen Sie unseren Blog: <a href="https://www.microsoft.com/en-us/learning/community.aspx">https://www.microsoft.com/en-us/learning/community.aspx</a> und überprüfen Sie unsere Prüfungsabgaben. Hinweis: Prüfungen werden um 23:59 Uhr Central Standard Time eingestellt<br/><br/></div>
+  
+  Die Prüfung ist für erfahrene IT-Experten gedacht, die SharePoint 2016 in einem Rechenzentrum und in der Cloud installieren, konfigurieren, bereitstellen und verwalten. Kandidaten haben in der Regel mehr als vier Jahre Erfahrung in der Planung und Verwaltung von SharePoint und anderen Kerntechnologien, von denen SharePoint abhängt, einschließlich Windows Server 2008 R2 oder höher, Internet Information Services (IIS), SQL Server 2008 R2 oder höher, Active Directory und Netzwerkinfrastrukturdienste.
 
+  Kandidaten sollten außerdem Erfahrung mit der Verwaltung der Business Continuity, einschließlich Datensicherung, Datenwiederherstellung und hoher Verfügbarkeit, sowie Erfahrung mit Authentifizierungs- und Sicherheitstechnologien haben. PowerShell-Erfahrung wird sehr begrüßt.
 
-  Kandidaten sollten außerdem Erfahrung mit der Verwaltung der Business Continuity, einschließlich Datensicherung, Datenwiederherstellung und hoher Verfügbarkeit, sowie Erfahrung mit Authentifizierungs- und Sicherheitstechnologien haben. PowerShell-Erfahrung wird sehr begrüßt.
-
-
-  Die sekundäre Zielgruppe für diese Prüfung sind Geschäftsanwendungsadministratoren (Business Application Administrators; BAAs), die aktiv an Line-of-Business-(LOB-)Projekten mit internen Geschäftskunden beteiligt sind, die mit SharePoint 2016 arbeiten.
-subTitle: Die Prüfung ist für erfahrene IT-Experten gedacht, die SharePoint 2016 in einem Rechenzentrum und in der Cloud installieren, konfigurieren, bereitstellen und verwalten. Kandidaten haben in der Regel mehr als vier Jahre Erfahrung in der Planung und Verwaltung von SharePoint und anderen Kerntechnologien, von denen SharePoint abhängt, einschließlich Windows Server 2008 R2 oder höher, Internet Information Services (IIS), SQL Server 2008 R2 oder höher, Active Directory und Netzwerkinfrastrukturdienste.
+  Die sekundäre Zielgruppe für diese Prüfung sind Geschäftsanwendungsadministratoren (Business Application Administrators; BAAs), die aktiv an Line-of-Business-(LOB-)Projekten mit internen Geschäftskunden beteiligt sind, die mit SharePoint 2016 arbeiten.
+subTitle: Die Prüfung ist für erfahrene IT-Experten gedacht, die SharePoint 2016 in einem Rechenzentrum und in der Cloud installieren, konfigurieren, bereitstellen und verwalten. Kandidaten haben in der Regel mehr als vier Jahre Erfahrung in der Planung und Verwaltung von SharePoint und anderen Kerntechnologien, von denen SharePoint abhängt, einschließlich Windows Server 2008 R2 oder höher, Internet Information Services (IIS), SQL Server 2008 R2 oder höher, Active Directory und Netzwerkinfrastrukturdienste.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3XSBh
 practiceTestUrl: https://www.mindhub.com/70-339-Managing-Microsoft-SharePoint-Server-2016-p/mu-70-339_p.htm?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=339&examname=Managing%20Microsoft%20SharePoint%20Server%202016&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-339
 locales:
 - en
 - es
@@ -26,17 +27,17 @@ locales:
 - de
 - ja
 - pt-br
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=339&examname=Managing%20Microsoft%20SharePoint%20Server%202016&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-339
-levels:
+levels: 
 - intermediate
 skills:
-- Design der SharePoint-Infrastruktur (15-20%)
-- Planen von Authentifizierung und Sicherheit (15–20%)
-- Planen der Workload-Optimierung (15–20%)
-- Planen von Produktionslösungen (15–20%)
-- Verwalten von Suchfunktionen (10–15%)
-- Planen und Konfigurieren von Clouddiensten (5–10%)
-- Überwachen und Optimieren einer SharePoint-Umgebung (10–15%)
+- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
+- Design der SharePoint-Infrastruktur (15 bis 20 %)
+- Planen von Authentifizierung und Sicherheit (15–20 %)
+- Planen der Workload-Optimierung (15–20 %)
+- Produktivitätslösungen planen (15-20%)
+- Verwalten von Suchfunktionen (10–15 %)
+- Planen und Konfigurieren von Clouddiensten (5–10 %)
+- Überwachen und Optimieren einer SharePoint-Umgebung (10–15 %)
 roles:
 - administrator
 products:
@@ -48,7 +49,7 @@ relatedCertifications:
 - related:
     uid: certification.mcse-productivity-certification
 resources:
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Zertifizierungsdashboard
@@ -56,7 +57,7 @@ resources:
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
