--- a/learn-certs-pr/exams/70-345.yml
+++ b/learn-certs-pr/exams/70-345.yml
@@ -1,19 +1,21 @@
 ### YamlMime:Examination
 title: Designing and Deploying Microsoft Exchange Server 2016
 metadata:
-  title: 'Prüfung 70-345: Designing and Deploying Microsoft Exchange Server 2016'
-  description: 'Prüfung 70-345: Designing and Deploying Microsoft Exchange Server 2016'
+  title: 'Exam 70-345: Designing and Deploying Microsoft Exchange Server 2016'
+  description: 'Exam 70-345: Designing and Deploying Microsoft Exchange Server 2016'
 uid: exam.70-345
 displayName: 70-345
-summary: >-
+summary: |-
+  <div style="color&#58; red;">Dieses Examen wird am 30. Juni 2020 eingestellt. Eine Ersatzprüfung kann verfügbar sein. Um mehr zu erfahren, besuchen Sie unseren Blog: <a href="https://www.microsoft.com/en-us/learning/community.aspx">https://www.microsoft.com/en-us/learning/community.aspx</a> und überprüfen Sie unsere Prüfungsabgaben. Hinweis: Prüfungen werden um 23:59 Uhr Central Standard Time eingestellt<br/><br/></div>
+  
   Kandidaten für diese Prüfung sind IT-Berater oder leitende Administratoren, die als technischer Leiter eines Teams von Administratoren fungieren. Die Kandidaten sollten mit den Anforderungen für die Integration von Microsoft Exchange Server mit Skype for Business und Office 365 vertraut sein.
-
 
   Die Kandidaten sollten mindestens drei Jahre Erfahrung in der Entwicklung und Verwaltung von Exchange-Servern haben und für die Exchange 2016-Messaging-Umgebung in einer Unternehmensumgebung verantwortlich sein.
 subTitle: Kandidaten für diese Prüfung sind IT-Berater oder leitende Administratoren, die als technischer Leiter eines Teams von Administratoren fungieren. Die Kandidaten sollten mit den Anforderungen für die Integration von Microsoft Exchange Server mit Skype for Business und Office 365 vertraut sein.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Y8do
 practiceTestUrl: https://www.mindhub.com/70-345-designing-and-deploying-microsoft-exchange/p/MU-70-345?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=345&examname=Designing%20and%20Deploying%20Microsoft%20Exchange%20Server%202016&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-345
 locales:
 - en
 - es
@@ -23,10 +25,10 @@ locales:
 - de
 - ja
 - pt-br
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=345&examname=Designing%20and%20Deploying%20Microsoft%20Exchange%20Server%202016&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-345
-levels:
+levels: 
 - advanced
 skills:
+- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Planen, Bereitstellen, Verwalten und Beheben von Problemen bei Mailbox-Datenbanken (15-20%)
 - Planen, Bereitstellen, Verwalten und Behandeln von Client-Zugriffsdiensten (15-20%)
 - Planen, Bereitstellen, Verwalten und Behandeln von Transportdiensten (15-20%)
@@ -44,7 +46,7 @@ relatedCertifications:
 - related:
     uid: certification.mcse-productivity-certification
 resources:
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Zertifizierungsdashboard
@@ -52,7 +54,7 @@ resources:
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
