--- a/learn-certs-pr/exams/az-120.yml
+++ b/learn-certs-pr/exams/az-120.yml
@@ -1,32 +1,31 @@
 ### YamlMime:Examination
-title: Planning and Administering Microsoft Azure for SAP Workloads (beta)
+title: 'Planning and Administering Microsoft Azure for SAP Workloads'
 metadata:
-  title: 'Prüfung AZ-120: Planning and Administering Microsoft Azure for SAP Workloads (beta)'
-  description: 'Prüfung AZ-120: Planning and Administering Microsoft Azure for SAP Workloads (beta)'
+  title: 'Exam AZ-120: Planning and Administering Microsoft Azure for SAP Workloads'
+  description: 'Exam AZ-120: Planning and Administering Microsoft Azure for SAP Workloads'
 uid: exam.az-120
 displayName: AZ-120
-summary: >-
-  Kandidaten für diese Prüfung sind Architekten und Ingenieure, die über Kenntnisse des SAP Landscape Certification Prozesses und von Industriestandards verfügen, die für den langfristigen Betrieb einer SAP-Lösung spezifisch sind. Die Kandidaten geben Empfehlungen zu Services ab und passen die Ressourcen entsprechend an, um eine optimale Auslastung, Leistung, Skalierbarkeit, Bereitstellung, Größe und Überwachung zu gewährleisten.
+summary: |-
+  Kandidaten für diese Prüfung sind Architekten und Ingenieure, die über Kenntnisse des SAP Landscape Certification Prozesses und von Industriestandards verfügen, die für den langfristigen Betrieb einer SAP-Lösung spezifisch sind. Die Kandidaten geben Empfehlungen zu den Dienstleistungen ab und passen die Ressourcen nach Bedarf an, um eine optimale Belastbarkeit, Leistung, Größenordnung, Bereitstellung, Größe und Überwachung zu gewährleisten.
 
-
-  Architekten von Azure for SAP Workloads sollten über umfangreiche Erfahrung und Kenntnisse in den Bereichen SAP-Anwendungen, SAP HANA, S/4HANA, SAP NetWeaver, SAP BW, OS-Server für SAP-Anwendungen und Datenbanken, Azure Portal, ARM-Vorlagen, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster Recovery Design, Datenschutzkonzepte und Netzwerke verfügen.
-
+  Architekten von Azure for SAP Workloads sollten über umfangreiche Erfahrungen und Kenntnisse in den Bereichen SAP-Anwendungen, SAP HANA, S/4HANA, SAP NetWeaver, SAP BW, OS Server für SAP-Anwendungen und Datenbanken, Azure Portal, ARM-Templates, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster-Recovery-Design, Datensicherungskonzepte und Networking verfügen.
 
   Es wird dringend empfohlen, dass die Kandidaten für diese Prüfung zusätzlich zu den SAP HANA- und Linux-Zertifizierungen eine Azure Administrator- oder Azure Architect Zertifizierung besitzen.
 subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erledigen: SAP-Workloads nach Azure übertragen, eine Azure-Lösung zur Unterstützung von SAP-Workloads entwickeln, Azure-SAP-Workloads erstellen und bereitstellen, Azure-Infrastruktur für SAP-Workloads validieren und die Azure-SAP-Architektur operationalisieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43XOu
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-120&examname=Exam%20AZ-120:%20Planning%20and%20Administering%20Microsoft%20Azure%20for%20SAP%20Workloads&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-120
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-120&examname=Prüfung%20AZ-120:%20Planning%20and%20Administering%20Microsoft%20Azure%20for%20SAP%20Workloads&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-120
 levels:
 - advanced
 skills:
+- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - SAP-Workloads nach Azure übertragen (10-15%)
 - Eine Azure-Lösung zur Unterstützung von SAP-Workloads entwickeln (20-25%)
-- Azure SAP Workloads erstellen und bereitstellen (35-40%)
+- Erstellen und Bereitstellen von Azure SAP Workloads (35-40%)
 - Azure Infrastructure für SAP-Workloads überprüfen (10-15%)
-- Operationalisieren der Azure SAP-Architektur (10-15%)s
+- Operationalisieren der Azure SAP-Architektur (10-15%)
 roles:
 - solution-architect
 - devops-engineer
@@ -34,6 +33,9 @@ products:
 - azure
 courses:
 - uid: course.az-120t00
+paths:
+- uid: learn-pr.wwl.planning-azure-sap-workloads
+- uid: learn.wwl.sap-certified-offerings-azure
 relatedCertifications:
 - related:
     uid: certification.azure-for-sap-workloads-specialty
@@ -41,18 +43,21 @@ resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungswiederholung
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
