--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -1,13 +1,14 @@
 ### YamlMime:Examination
 title: Microsoft Azure Fundamentals
 metadata:
-  title: 'Prüfung AZ-900: Microsoft Azure Fundamentals'
-  description: 'Prüfung AZ-900: Microsoft Azure Fundamentals'
+  title: 'Exam AZ-900: Microsoft Azure Fundamentals'
+  description: 'Exam AZ-900: Microsoft Azure Fundamentals'
 uid: exam.az-900
 displayName: AZ-900
-summary: >-
+summary: |-
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 28. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.</div>
+  
   Diese Prüfung richtet sich an Kandidaten, die grundlegende Kenntnisse über Cloud Services und deren Bereitstellung mit Microsoft Azure nachweisen möchten. Die Prüfung richtet sich an Kandidaten mit nicht-technischem Hintergrund, die beispielsweise mit dem Vertrieb oder der Beschaffung von Cloud-basierten Lösungen und Services zu tun haben oder sich mit Cloud-basierten Lösungen und Services beschäftigen, sowie an Kandidten mit technischem Hintergrund, die ihre grundlegenden Kenntnisse über Cloud Services überprüfen müssen. Technische IT-Erfahrung ist nicht erforderlich, jedoch sind allgemeine IT-Kenntnisse und Erfahrungen von Vorteil.
-
 
   Diese Prüfung kann als optionaler erster Schritt unternommen werden, um mehr über Cloud Services zu erfahren und wie diese Konzepte von Microsoft Azure veranschaulicht werden. Sie kann als Vorstufe zu Microsoft Azure oder Microsoft Cloud Services Prüfungen verwendet werden. Obwohl es ein vorteilhafter erster Schritt wäre, das Wissen auf grundlegendem Niveau zu überprüfen, ist die Teilnahme an dieser Prüfung keine Voraussetzung für die Teilnahme an anderen Zertifizierungen auf Grundlage von Azure.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden Konzepte zu verstehen: Cloud-Konzepte; Core Azure Services; Sicherheit, Datenschutz, Compliance, Trust und Azure-Preisgestaltung und -Support.'
@@ -16,9 +17,9 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwU
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 providers:
   - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-900&examname=Prüfung%20AZ-900:%20Microsoft%20Azure%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fen-us%2Flearn%2Fcertifications%2Fexams%2Faz-900
+    examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-900&examname=Exam%20AZ-900:%20Microsoft%20Azure%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-900
   - providerType: certiport
-    examUrl: https://www.certiport.com/locator
+    examUrl: http://www.certiport.com/locator
 locales:
 - en
 - ja
@@ -27,10 +28,11 @@ locales:
 levels:
 - beginner
 skills:
+- Der Inhalt dieser Prüfung wird am 28. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.
 - Kenntnisse von Cloud Konzepten (15-20%)
 - Kenntnisse der Core Azure Services (30-35%)
 - Kenntnisse von Sicherheit, Datenschutz, Compliance und Trust (25-30%)
-- Kenntnisse der AzurePreise und des Azure-Supports (20-25%)
+- Kenntnisse der Azure Preise und des Azure-Supports (20-25%)
 roles:
 - developer
 products:
@@ -43,21 +45,24 @@ relatedCertifications:
 - related:
     uid: certification.azure-fundamentals
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie die Schulungsressourcen, um von Microsoft Certified: Azure Fundamentals zu werden.'
+- title: Lernpfad zur Zertifizierung
+  description: 'Entdecken Sie die Schulungsressourcen, um von Microsoft in Azure Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE38YZj
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren.  Werktags (Montag-Freitag) wird Ihnen ein Forenmoderator antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
