--- a/learn-certs-pr/exams/ms-600.yml
+++ b/learn-certs-pr/exams/ms-600.yml
@@ -1,27 +1,28 @@
 ### YamlMime:Examination
-title: Building Applications and Solutions with Microsoft 365 Core Services (beta)
+title: 'Building Applications and Solutions with Microsoft 365 Core Services (beta)'
 metadata:
-  title: 'Prüfung MS-600: Building Applications and Solutions with Microsoft 365 Core Services (beta)'
-  description: 'Prüfung MS-600: Building Applications and Solutions with Microsoft 365 Core Services (beta)'
+  title: 'Exam MS-600: Building Applications and Solutions with Microsoft 365 Core Services (beta)'
+  description: 'Exam MS-600: Building Applications and Solutions with Microsoft 365 Core Services (beta)'
 uid: exam.ms-600
 displayName: MS-600
-summary: >-
-  Kandidaten für diese Prüfung sind Microsoft 365 Entwickler, die Anwendungen und Lösungen entwerfen, erstellen, testen und warten, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
+summary: |-
+  Kandidaten für diese Prüfung sind Microsoft 365 Developers, die Anwendungen und Lösungen entwerfen, erstellen, testen und warten, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
 
+  Die Kandidaten für diese Prüfung verfügen über Kenntnisse in Microsoft Identity und Microsoft Graph. Sie verfügen über allgemeine Kenntnisse über UI-Elemente (Adaptive Cards und UI Fabric), Integrationspunkte (einschließlich Microsoft Teams, Office Add-Ins, SharePoint Framework, Actionable Messages) und die Festlegung von Workload-Plattform-Zielen.
 
-  Die Kandidaten für diese Prüfung verfügen über Kenntnisse in Microsoft Identity und Microsoft Graph. Sie verfügen über allgemeine Kenntnisse über UI-Elemente ("Adaptive Cards" und "UI Fabric"), Integrationspunkte (einschließlich Microsoft Teams, Office Add-Ins, SharePoint Framework, Actionable Messages) und die Festlegung von Workload-Plattform-Zielen.
-
-
-  Die Kandidaten sollten über Erfahrungen in der Entwicklung von Lösungen auf Microsoft Teams, Office Add-Ins oder SharePoint Framework in allen Phasen der Softwareentwicklung verfügen. Sie sollten über ein grundlegendes Verständnis von REST-APIs, JSON, OAuth2, OData, OpenID Connect, Microsoft-Identitäten (einschließlich Azure AD- und Microsoft-Konten), Azure AD B2C und Berechtigungs- und Genehmigungskonzepten verfügen.
+  Die Kandidaten sollten über Erfahrungen in der Entwicklung von Lösungen auf Microsoft Teams, Office Add-Ins oder SharePoint Framework in allen Phasen der Softwareentwicklung verfügen. Sie sollten über ein grundlegendes Verständnis von REST-APIs, JSON, OAuth2, OData, OpenID Connect, Microsoft identities (Microsoft-Identitäten) (einschließlich Azure AD- und Microsoft-accounts (Konten)), Azure AD B2C und Berechtigungs- und Genehmigungskonzepten verfügen.
+  
+  <div style='color&#58; red;'><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Um mehr zu erfahren <a href="/learn/certifications/certification-exams#participating-in-beta-exams">about the value and importance of beta exams</a>.</div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Microsoft-Identity implementieren, Anwendungen mit Microsoft Graph erstellen, SharePoint erweitern und anpassen, Teams erweitern und Office erweitern.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43CZn
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-600&examname=Exam%20MS-600:%20Building%20Applications%20and%20Solutions%20with%20Microsoft%20365%20Core%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-600
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-600&examname=Prüfung%20MS-600:%20Building%20Applications%20and%20Solutions%20with%20Microsoft%20365%20Core%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-600
 levels:
 - intermediate
 skills:
+- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Microsoft Identity einrichten (20-25%)
 - Apps mit Microsoft Graph erstellen (20-25%)
 - SharePoint erweitern und anpassen (20-25%)
@@ -37,24 +38,27 @@ relatedCertifications:
 - related:
     uid: certification.m365-developer-associate
 resources:
-- title: Lernpfad zur Zertifizirung
+- title: Lernpfad zur Zertifizierung
   description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4561r
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungswiederholung
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
