--- a/learn-certs-pr/exams/70-333.yml
+++ b/learn-certs-pr/exams/70-333.yml
@@ -1,24 +1,28 @@
 ### YamlMime:Examination
 title: Deploying Enterprise Voice with Skype for Business 2015
 metadata:
-  title: 'Prüfung 70-333: Deploying Enterprise Voice with Skype for Business 2015'
-  description: 'Prüfung 70-333: Deploying Enterprise Voice with Skype for Business 2015'
+  title: 'Exam 70-333: Deploying Enterprise Voice with Skype for Business 2015'
+  description: 'Exam 70-333: Deploying Enterprise Voice with Skype for Business 2015'
 uid: exam.70-333
 displayName: 70-333
-summary: Als Kandidaten für diese Prüfung kommen IT- und Telekommunikationsberater infrage, die Lösungen für vereinheitlichte Kommunikation entwerfen, planen, implementieren und verwalten. Die Kandidaten müssen in der Lage sein, geschäftliche Anforderungen in einer technischen Architektur umzusetzen und Lösungen für vereinheitlichte Kommunikation zu entwerfen. Kandidaten sollten über mindestens zwei Jahre Erfahrung mit Skype for Business-Technologien verfügen und mit unterstützten Migrationsszenarien vertraut sein. Die Kandidaten sollten in der Lage sein, Skype for Business Server- und Skype for Business Online-Lösungen für Endbenutzer, Endgeräte, Telefonie, Audio-/Video- und Webkonferenzen, Sicherheit und hohe Verfügbarkeit bereitzustellen. Die Kandidaten sollten auch wissen, wie man Microsoft-Tools zur Überwachung und Fehlerbehebung von Skype for Business einsetzt. Außerdem sollten Kandidaten Erfahrung mit Active Directory Domain Services, Datennetzwerken sowie Telekommunikationsstandards und -komponenten für die Konfiguration von Skype for Business vorweisen können. Die Kandidaten sollten mit den Anforderungen für die Integration von Skype for Business in Microsoft Exchange Server und Office 365 vertraut sein.
-subTitle: Als Kandidaten für diese Prüfung kommen IT- und Telekommunikationsberater infrage, die Lösungen für vereinheitlichte Kommunikation entwerfen, planen, implementieren und verwalten. Die Kandidaten müssen in der Lage sein, geschäftliche Anforderungen in einer technischen Architektur umzusetzen und Lösungen für vereinheitlichte Kommunikation zu entwerfen. Kandidaten sollten über mindestens zwei Jahre Erfahrung mit Skype for Business-Technologien verfügen und mit unterstützten Migrationsszenarien vertraut sein. Die Kandidaten sollten in der Lage sein, Skype for Business Server- und Skype for Business Online-Lösungen für Endbenutzer, Endgeräte, Telefonie, Audio-/Video- und Webkonferenzen, Sicherheit und hohe Verfügbarkeit bereitzustellen. Die Kandidaten sollten auch wissen, wie man Microsoft-Tools zur Überwachung und Fehlerbehebung von Skype for Business einsetzt. Außerdem sollten Kandidaten Erfahrung mit Active Directory Domain Services, Datennetzwerken sowie Telekommunikationsstandards und -komponenten für die Konfiguration von Skype for Business vorweisen können. Die Kandidaten sollten mit den Anforderungen für die Integration von Skype for Business in Microsoft Exchange Server und Office 365 vertraut sein.
+summary: |-
+  <div style='color&#58; red;'>Dieses Examen wird am 30. Juni 2020 eingestellt. Eine Ersatzprüfung kann verfügbar sein. Um mehr zu erfahren, besuchen Sie unseren Blog: <a href="https://www.microsoft.com/en-us/learning/community.aspx">https://www.microsoft.com/en-us/learning/community.aspx</a> und überprüfen Sie unsere Prüfungsabgaben. Hinweis: Prüfungen werden um 23:59 Uhr Central Standard Time eingestellt<br/><br/></div>
+  
+  Als Kandidaten für diese Prüfung kommen IT- und Telekommunikationsberater infrage, die Lösungen für vereinheitlichte Kommunikation entwerfen, planen, implementieren und verwalten. Die Kandidaten müssen in der Lage sein, geschäftliche Anforderungen in einer technischen Architektur umzusetzen und Lösungen für vereinheitlichte Kommunikation zu entwerfen. Kandidaten sollten über mindestens zwei Jahre Erfahrung mit Skype for Business-Technologien verfügen und mit unterstützten Migrationsszenarien vertraut sein. Die Kandidaten sollten in der Lage sein, Skype for Business Server- und Skype for Business Online-Lösungen für Endbenutzer, Endgeräte, Telefonie, Audio-/Video- und Webkonferenzen, Sicherheit und hohe Verfügbarkeit bereitzustellen. Die Kandidaten sollten auch wissen, wie man Microsoft-Tools zur Überwachung und Fehlerbehebung von Skype for Business einsetzt. Außerdem sollten Kandidaten Erfahrung mit Active Directory Domain Services, Datennetzwerken sowie Telekommunikationsstandards und -komponenten für die Konfiguration von Skype for Business vorweisen können. Die Kandidaten sollten mit den Anforderungen für die Integration von Skype for Business in Microsoft Exchange Server und Office 365 vertraut sein.
+subTitle: Als Kandidaten für diese Prüfung kommen IT- und Telekommunikationsberater infrage, die Lösungen für vereinheitlichte Kommunikation entwerfen, planen, implementieren und verwalten. Die Kandidaten müssen in der Lage sein, geschäftliche Anforderungen in einer technischen Architektur umzusetzen und Lösungen für vereinheitlichte Kommunikation zu entwerfen. Kandidaten sollten über mindestens zwei Jahre Erfahrung mit Skype for Business-Technologien verfügen und mit unterstützten Migrationsszenarien vertraut sein. Die Kandidaten sollten in der Lage sein, Skype for Business Server- und Skype for Business Online-Lösungen für Endbenutzer, Endgeräte, Telefonie, Audio-/Video- und Webkonferenzen, Sicherheit und hohe Verfügbarkeit bereitzustellen. Die Kandidaten sollten auch wissen, wie man Microsoft-Tools zur Überwachung und Fehlerbehebung von Skype for Business einsetzt. Außerdem sollten Kandidaten Erfahrung mit Active Directory Domain Services, Datennetzwerken sowie Telekommunikationsstandards und -komponenten für die Konfiguration von Skype for Business vorweisen können. Die Kandidaten sollten mit den Anforderungen für die Integration von Skype for Business in Microsoft Exchange Server und Office 365 vertraut sein.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Y8dq
-practiceTestUrl: https://www.mindhub.com/product-p/mu-70-333_p.htm&utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+practiceTestUrl: https://www.mindhub.com/70-333-deploying-enterprise-voice-with-skype/p/MU-70-333?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=333&examname=Deploying%20Enterprise%20Voice%20with%20Skype%20for%20Business%202015&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-333
 locales:
 - en
 - ja
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=333&examname=Deploying%20Enterprise%20Voice%20with%20Skype%20for%20Business%202015&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-333
-levels:
+levels: 
 - advanced
 skills:
+- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Planen und Gestalten von Skype für Unternehmen mit Enterprise Voice (30-35%)
-- Bereitstellung und Konfiguration von Enterprise Voice (30-35%)
+- Bereitstellen und Konfigurieren von Enterprise Voice (30-35%)
 - Verwalten und Beheben von Problemen mit Enterprise Voice (30-35%)
 roles:
 - administrator
@@ -30,7 +34,7 @@ relatedCertifications:
 - related:
     uid: certification.mcse-productivity-certification
 resources:
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Zertifizierungsdashboard
@@ -38,7 +42,7 @@ resources:
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
