--- a/learn-certs-pr/exams/mb-700.yml
+++ b/learn-certs-pr/exams/mb-700.yml
@@ -1,37 +1,36 @@
 ### YamlMime:Examination
 title: 'Microsoft Dynamics 365: Finance and Operations Apps Solution Architect (beta)'
 metadata:
-  title: 'Prüfung MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect (beta)'
-  description: 'Prüfung MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect (beta)'
+  title: 'Exam MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect (beta)'
+  description: 'Exam MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect (beta)'
 uid: exam.mb-700
 displayName: MB-700
-summary: >-
-  Lösungsarchitekten für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen  zu entwickeln.
+summary: |-
+  Solution Architects (Lösungsarchitekten) für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen zu entwickeln.
 
+  Der Solution Architect (Lösungsarchitekt) ist für die Integrität und erfolgreiche Umsetzung des gesamten Lösungsdesigns verantwortlich. Er bietet eine kritische Begleitung während der Pre-Sales-Phase und des Designs, er berät während des restlichen Projektlebenszyklus und löst Probleme, die während der Implementierung auftreten.
 
-  Der Lösungsarchitekt ist für die Integrität und erfolgreiche Umsetzung des gesamten Lösungsdesigns verantwortlich. Er bietet eine kritische Begleitung während der  Pre-Sales-Phase und des Designs, er berät während des restlichen Projektlebenszyklus und löst Probleme, die während der Implementierung auftreten.
-
-
-  Der Lösungsarchitekt muss über breites Wissen und Erfahrung verfügen, das die Geschäftsanforderungen und Produktfunktionen abdeckt. Der Lösungsarchitekt muss über breites funktionales und technisches Fachwissen als Entwickler oder Fachberater in einer der folgenden Funktionen verfügen&#58; Finanzen, Fertigung oder Lieferkettenmanagement. Darüber hinaus verfügen Lösungsarchitekten über umfangreiche Fachkenntnisse in einer oder mehreren Kundenbranchen.
-
-
-  <div style="color:red"><br/><strong>NOTE&#58; Diese Prüfung wird erst am 27. Januar 2020 verfügbar sein</strong></div>
+  Der Solution Architect (Lösungsarchitekt) muss über breites Wissen und Erfahrung verfügen, das die Geschäftsanforderungen und Produktfunktionen abdeckt. Der Solution Architect (Lösungsarchitekt) muss über breites funktionales und technisches Fachwissen als Entwickler oder Fachberater in einer der folgenden Funktionen verfügen: Finanzen, Fertigung oder Lieferkettenmanagement. Darüber hinaus verfügen Lösungsarchitekten über umfangreiche Fachkenntnisse in einer oder mehreren Kundenbranchen.
+  
+  <div style='color&#58; red;'><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Um mehr zu erfahren <a href="/learn/certifications/certification-exams#participating-in-beta-exams">about the value and importance of beta exams</a>.</div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Identifizieren von Lösungsanforderungen, Entwerfen von Lösungskomponenten und Definieren von Lösungstest- und Managementstrategien.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Vdh
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-700&examname=Exam%20MB-700:%20Microsoft%20Dynamics%20365%3A%20Finance%20and%20Operations%20Apps%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-700
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-700&examname=Prüfung%20MB-700:%20Microsoft%20Dynamics%20365%3A%20Finance%20and%20Operations%20Apps%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-700
 levels:
 - advanced
 skills:
 - Identifizieren von Lösungsanforderungen(30-35%)
 - Entwerfen von Lösungskomponenten (40-45%)
-- Definition von Lösungstest- und Managementstrategien(25-30%)
+- Definition von Lösungstest- und Managementstrategien (25-30%)
 roles:
 - solution-architect
 products:
 - dynamics
+paths:
+- uid: learn-dynamics.become-solution-architect
 relatedCertifications:
 - related:
     uid: certification.d365-finance-and-operations-apps-solution-architect-expert
@@ -39,18 +38,21 @@ resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungswiederholung
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
