--- a/learn-certs-pr/exams/mb-900.yml
+++ b/learn-certs-pr/exams/mb-900.yml
@@ -1,32 +1,33 @@
 ### YamlMime:Examination
 title: Microsoft Dynamics 365 Fundamentals
 metadata:
-  title: 'Prüfung MB-900: Microsoft Dynamics 365 Fundamentals'
-  description: 'Prüfung MB-900: Microsoft Dynamics 365 Fundamentals'
+  title: 'Exam MB-900: Microsoft Dynamics 365 Fundamentals'
+  description: 'Exam MB-900: Microsoft Dynamics 365 Fundamentals'
 uid: exam.mb-900
 displayName: MB-900
-summary: >-
+summary: |-
+  <div style='color&#58; red; font-weight&#58; bold;'>DIESE PRÜFUNG WURDE AM Dienstag, 31. Dezember 2019 EINGESTELLT. Hinweis&#58; Prüfungen werden um 23&#58;59 Uhr Central Standard Time eingestellt</div>
+  <br/>
   Diese Prüfung richtet sich an Kandidaten, die grundlegende Kenntnisse über Microsoft Dynamics 365, Power Platform-Anwendungen und das Cloud Computing-Modell nachweisen möchten. Diese Prüfung behandelt die Überlegungen und Vorteile der Einführung von Dynamics 365, der Power Platform und Cloud Services im Allgemeinen. Diese Prüfung kann als Vorläufer für Dynamics 365-Zertifizierungen und -Training genommen werden.
-
 
   Kandidaten für diese Prüfung sollten über allgemeine Kenntnisse oder relevante Arbeitserfahrung in einer Informationstechnologie-(IT)-Umgebung. Die Kandidaten sollten auch über ein grundlegendes Verständnis von Geschäftsszenarien und Erfahrungen bei der Bewältigung von Geschäfts-, Rechts- und Sicherheitsanforderungen für IT-Projekte verfügen.
 subTitle: Diese Prüfung misst Ihre Kompetenz, Microsoft Dynamics 365, die Power Platform, Cloud-Konzepte, Lizenzoptionen sowie Bereitstellungs- und Release-Optionen zu verstehen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVu
-practiceTestUrl: https://us.mindhub.com/p/MU-MB-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/
 locales:
 - en
 - ja
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-900&examname=Prüfung%20MB-900:%20Microsoft%20Dynamics%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-900
 levels:
 - beginner
 skills:
 - Dynamics verstehen 365 (40-45%)
 - Kenntnisse von Cloud Konzepten (25-30%)
 - Verstehen von Implementierungen und Versionen (20-25%)
+retirementDate: 12/31/2019
 roles:
 - developer
-products:
+products: 
 - dynamics
 courses:
 - uid: course.mb-900t01
@@ -36,21 +37,24 @@ relatedCertifications:
 - related:
     uid: certification.d365-fundamentals
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Dynamics 365 Fundamentals zu werden.'
+- title: Lernpfad zur Zertifizierung
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35v9m
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
