--- a/learn-certs-pr/exams/pl-900.yml
+++ b/learn-certs-pr/exams/pl-900.yml
@@ -1,29 +1,32 @@
 ### YamlMime:Examination
-title: Microsoft Power Platform Fundamentals (beta)
+title: 'Microsoft Power Platform Fundamentals'
 metadata:
-  title: 'Prüfung PL-900: Microsoft Power Platform Fundamentals (beta)'
-  description: 'Prüfung PL-900: Microsoft Power Platform Fundamentals (beta)'
+  title: 'Exam PL-900: Microsoft Power Platform Fundamentals'
+  description: 'Exam PL-900: Microsoft Power Platform Fundamentals'
 uid: exam.pl-900
 displayName: PL-900
-summary: >-
+summary: |-
   Kandidaten für diese Prüfung sind Anwender, die eine Produktivitätssteigerung durch Automatisierung von Geschäftsprozessen, durch Datenanalyse zum Erlangen geschäftlicher Erkenntnisse und durch effektiveres Handeln durch Erstellen einfacher App-Funktionen anstreben.
-
-
-  Diese Prüfung umfasst die folgenden&#58; Beschreiben Sie die Power-Platform-Komponenten&#58; Power Apps, Power BI, Microsoft Flow, Common Data Service (CDS), Konnektoren und AI Builder. Beschreiben Sie cloudübergreifende Szenarien, die über Microsoft 365, Dynamics 365, Microsoft Azure und Drittanbieterdienste repräsentiert werden. Identifizieren Sie die Vorteile und Fähigkeiten von Power Platform. Identifizieren Sie die grundlegende Funktionalität und den Geschäftswert der Power-Platform-Komponenten. Implementieren Sie einfache Lösungen mit Microsoft Flow, Power BI und AI Builder und erstellen Sie eine Basis-App in einer No-Code Umgebung.
+  
+  Diese Prüfung umfasst die folgende: Beschreiben Sie die Power-Platform-Komponenten: Power Apps, Power BI, Microsoft Flow, Common Data Service (CDS), Konnektoren und AI Builder. Beschreiben Sie cloudübergreifende Szenarien, die über Microsoft 365, Dynamics 365, Microsoft Azure und Drittanbieterdienste repräsentiert werden. Identifizieren Sie die Vorteile und Fähigkeiten von Power Platform. Identifizieren Sie die grundlegende Funktionalität und den Geschäftswert der Power-Platform-Komponenten. Implementieren Sie einfache Lösungen mit Microsoft Flow, Power BI und AI Builder und erstellen Sie eine Basis-App in einer No-Code Umgebung.
 subTitle: Diese Prüfung misst Ihre Fähigkeit, den Geschäftswert und die Kernkomponenten von Power Platform zu verstehen und einzuschätzen und Ihre Fähigkeit, den Geschäftswert von Power BI und Microsoft Flow zu demonstrieren.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Nnn
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=PL-900&examname=Prüfung%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900
+providers:
+  - providerType: pearson-vue
+    examUrl: 'https://examregistration.microsoft.com/?locale=de-de&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900'
+  - providerType: certiport
+    examUrl: http://www.certiport.com/locator
 levels:
 - beginner
 skills:
 - Den Geschäftswert der Power Platform verstehen (20-25%)
-- Die Kernkomponenten der Power Platform verstehen (25-30%)
-- Den Geschäftswert von Power BI veranschaulichen(15-20%)
-- Den Geschäftswert von Power Apps veranschaulichen (15-20%)
-- Den Geschäftswert von Microsoft Flow veranschaulichen (15-20%)
+- Die Kernkomponenten der Power Platform verstehen (20-25%)
+- Den Geschäftswert von Power BI veranschaulichen (15-20%)
+- Den Geschäftswert von Power Apps veranschaulichen (20-25%)
+- Den Geschäftswert von Power veranschaulichen (15-20%)
 roles:
 - developer
 products:
@@ -36,21 +39,27 @@ relatedCertifications:
 - related:
     uid: certification.power-platform-fundamentals
 resources:
+- title: Lernpfad zur Zertifizierung
+  description: 'Entdecken Sie die Schulungsressourcen, um von Microsoft in Power Platform Fundamentals.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oeDu
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungswiederholung
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
