--- a/learn-certs-pr/mcse-productivity-certification.yml
+++ b/learn-certs-pr/mcse-productivity-certification.yml
@@ -2,15 +2,15 @@
 title: MCSE Productivity Solutions Expert
 metadata:
   title: MCSE Productivity Solutions Expert
-  description: MCSE Produktivitätslösungen Expert
+  description: MCSE Productivity Solutions Expert
 uid: certification.mcse-productivity-certification
 iconUrl: /media/learn/certification/badges/mcse-badge.svg
-summary: >-
-  Diese Zertifizierung bestätigt, dass Sie die erforderlichen Kompetenzen haben, um Ihr Unternehmen in die Cloud zu bringen, die Produktivität und Flexibilität der Benutzer zu steigern, den Datenverlust zu reduzieren und die Datensicherheit für Ihre Organisation zu verbessern. Diese Zertifizierung kann verwendet werden, um eine der Voraussetzungen zu erfüllen, um ein [Microsoft 365 Certified Enterprise Administrator Expert](https://www.microsoft.com/learning/m365-enterprise-administrator.aspx) zu werden.
-
-
-  Um ein MCSE Productivity Solutions Expert zu werden, bestehen die folgenden Anforderungen&#58;
-
+summary: |-
+  <div style='color&#58; red;'>Dieses Examen wird am 30. Juni 2020 eingestellt. Eine Ersatzprüfung kann verfügbar sein. Um mehr zu erfahren, besuchen Sie unseren Blog: <a href="https://www.microsoft.com/en-us/learning/community.aspx">https://www.microsoft.com/en-us/learning/community.aspx</a> und überprüfen Sie unsere Prüfungsabgaben. Hinweis: Prüfungen werden um 23:59 Uhr Central Standard Time eingestellt<br/><br/></div>
+  
+  Diese Zertifizierung bestätigt, dass Sie die erforderlichen Kompetenzen haben, um Ihr Unternehmen in die Cloud zu bringen, die Produktivität und Flexibilität der Benutzer zu steigern, den Datenverlust zu reduzieren und die Datensicherheit für Ihre Organisation zu verbessern. Diese Zertifizierung kann verwendet werden, um eine der Voraussetzungen zu erfüllen, um ein [Microsoft 365 Certified&#58; Enterprise Administrator Expert](https://www.microsoft.com/learning/m365-enterprise-administrator.aspx) zu werden.
+  
+  Um ein MCSE Productivity Solutions Expert zu werden, bestehen die folgenden Anforderungen:
   - Erhalten Sie eine Voraussetzung für die Zertifizierung
     - Voraussetzungsoption 1&#58; [MCSA Windows Server 2012](https://www.microsoft.com/learning/mcsa-windows-server-certification.aspx)
     - Voraussetzungsoption 2&#58; [MCSA Windows Server 2016](https://www.microsoft.com/learning/mcsa-windows-server-2016-certification.aspx)
@@ -19,11 +19,11 @@ summary: >-
     - [70-334&#58; Core Solutions of Microsoft Skype for Business](/learn/certifications/exams/70-334)
     - [70-339&#58; Managing Microsoft SharePoint Server 2016](/learn/certifications/exams/70-339)
     - [70-345&#58; Designing and Deploying Microsoft Exchange Server 2016](/learn/certifications/exams/70-345)
-subTitle: Diese Zertifizierung bestätigt, dass Sie die erforderlichen Kompetenzen haben, um Ihr Unternehmen in die Cloud zu bringen, die Produktivität und Flexibilität der Benutzer zu steigern, den Datenverlust zu reduzieren und die Datensicherheit für Ihre Organisation zu verbessern. Diese Zertifizierung kann verwendet werden, um eine der Voraussetzungen zu erfüllen, um Microsoft 365 Certified Enterprise Administrator Expert zu werden.
+subTitle: 'Diese Zertifizierung bestätigt, dass Sie die erforderlichen Kompetenzen haben, um Ihr Unternehmen in die Cloud zu bringen, die Produktivität und Flexibilität der Benutzer zu steigern, den Datenverlust zu reduzieren und die Datensicherheit für Ihre Organisation zu verbessern. Diese Zertifizierung kann verwendet werden, um eine der Voraussetzungen zu erfüllen, um Microsoft 365 Certified: Enterprise Administrator Expert zu werden.'
 levels:
 - advanced
 skills:
-- keine
+- none
 roles:
 - administrator
 type: role-based
@@ -47,11 +47,11 @@ resources:
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
